# research-assistant

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  prefect.yaml  pyproject.toml  run-backend.sh  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
architecture/overview/: index.html
architecture/tech-stack/: index.html
deployment/: index.html
docs/: api.md  deployment.md  index.md
docs/architecture/: overview.md  tech-stack.md
docs/benchmarks/: embeddings.md  retrieval.md
docs/pipeline/: chunking.md  embeddings.md  ingestion.md  retrieval.md  vector-storage.md
frontend/: package-lock.json
frontend/src/routes/: +layout.svelte  +page.svelte
pipeline/chunking/: index.html
pipeline/embeddings/: index.html
pipeline/ingestion/: index.html
pipeline/retrieval/: index.html
pipeline/vector-storage/: index.html
scripts/: benchmark_embeddings.py  evaluate_retrieval.py  index_papers.py  query.py  run_flow.py  search_papers.py
search/: search_index.json
src/: config.py  main.py
src/services/: __init__.py  arxiv_fetcher.py  document_loader.py  embeddings.py  evaluation.py  html_fetcher.py  rag_chain.py  reranker.py  vector_store.py
src/workflows/: __init__.py  collection.py  indexing.py  orchestrator.py
tests/: conftest.py  test_api.py  test_arxiv_fetcher.py  test_document_loader.py  test_embeddings.py  test_integration.py  test_reranker.py  test_vector_store.py
