[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.6",
    "fastapi>=0.124.2",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "pymupdf>=1.26.6",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
